added builtin metric to metered charm

--- a/testing/repo/quantal/metered/metrics.yaml
+++ b/testing/repo/quantal/metered/metrics.yaml
@@ -2,3 +2,6 @@ metrics:
   pings:
     type: gauge
     description: Description of the metric.
+  juju-unit-time:
+    type: gauge
+    description: Builtin metric
