Introduce bespoke charm and bundle path instances instead of reusing repo interface

--- a/internal/test-charm-repo/quantal/multi-series/metadata.yaml
+++ b/internal/test-charm-repo/quantal/multi-series/metadata.yaml
@@ -1,7 +1,7 @@
 name: new-charm-with-multi-series
 summary: "K/V storage engine"
 description: "Scalable K/V Store in Erlang with Clocks :-)"
-supported-series:
+series:
   - precise
   - trusty
 provides:
