Rework Resolve() method to return a charm Reference in preparation for store returning supported series

--- a/internal/test-charm-repo/quantal/multi-series-bad/metadata.yaml
+++ b/internal/test-charm-repo/quantal/multi-series-bad/metadata.yaml
@@ -1,4 +1,4 @@
-name: bad-charm-with-multi-series
+name: multi-series-bad
 summary: "K/V storage engine"
 description: "An example of an charm which exists in a repo under
 the quantal series but which declares it only supports precise and
